network/httproute-grafana.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: hse-llm-project
  labels:
    app.kubernetes.io/part-of: monitoring
spec:
  parentRefs:
    - name: web-gateway
      namespace: hse-llm-project
  hostnames:
    - grafana.hse-llm-project-2026.ru
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-grafana
          namespace: monitoring
          port: 80
